// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SideBar > should render 1`] = `
<DocumentFragment>
  <div
    class="border-theme-secondary-300 bg-theme-secondary-200 dark:border-theme-dark-700 dim:border-theme-dim-700 dim:bg-theme-dim-950 dim:md:bg-transparent relative -mx-6 -mt-4 border-t px-6 py-2 md:m-0 md:border-t-0 md:bg-transparent md:p-0 lg:hidden dark:bg-black dark:md:bg-transparent"
  >
    <div
      aria-expanded="false"
      aria-haspopup="dialog"
      data-testid="dropdown__toggle"
    >
      <div
        class="md:border-theme-secondary-300 dark:border-theme-dark-700 dim:border-theme-dim-700 dark:bg-theme-dark-900 dim:bg-theme-dim-900 dim:border flex cursor-pointer items-center space-x-4 overflow-hidden rounded border border-transparent bg-white px-4 py-3 dark:border"
      >
        <span
          class="flex-1 leading-tight font-semibold"
        >
          General
        </span>
        <div
          class="transition-transform"
        >
          <div
            style="height: 10px; width: 10px;"
          >
            <svg
              id="chevron-down-small"
              style="height: 100%; width: 100%;"
              viewBox="0 0 10 10"
              x="0"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <path
                d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="border-theme-secondary-300 dark:border-theme-dark-700 dim:border-theme-dim-700 hidden w-[200px] rounded-xl border p-1 lg:block"
  >
    <ul
      class="space-y-1"
    >
      <li
        class="relative cursor-default"
        data-testid="side-menu__item--general"
      >
        <div
          class="group relative flex h-12 items-center rounded-lg px-5 transition-all bg-theme-secondary-200 text-theme-primary-600 dim:bg-theme-dim-950 dim:text-theme-dim-50 dark:bg-theme-dark-950 dark:text-theme-dark-50"
        >
          <span
            class="font-semibold"
          >
            General
          </span>
        </div>
      </li>
      <li
        class="relative cursor-pointer"
        data-testid="side-menu__item--password"
      >
        <div
          class="group relative flex h-12 items-center rounded-lg px-5 transition-all hover:bg-theme-secondary-200 hover:text-theme-secondary-800 dim-hover:bg-theme-dim-950 dim-hover:text-theme-dim-50 dark:hover:bg-theme-dark-950 dark:hover:text-theme-dark-50"
        >
          <span
            class="font-semibold"
          >
            Password
          </span>
        </div>
      </li>
      <li
        class="relative cursor-pointer"
        data-testid="side-menu__item--export"
      >
        <div
          class="group relative flex h-12 items-center rounded-lg px-5 transition-all hover:bg-theme-secondary-200 hover:text-theme-secondary-800 dim-hover:bg-theme-dim-950 dim-hover:text-theme-dim-50 dark:hover:bg-theme-dark-950 dark:hover:text-theme-dark-50"
        >
          <span
            class="font-semibold"
          >
            Export
          </span>
        </div>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`SideBar > should render responsive dropdown 1`] = `
<DocumentFragment>
  <div
    class="border-theme-secondary-300 bg-theme-secondary-200 dark:border-theme-dark-700 dim:border-theme-dim-700 dim:bg-theme-dim-950 dim:md:bg-transparent relative -mx-6 -mt-4 border-t px-6 py-2 md:m-0 md:border-t-0 md:bg-transparent md:p-0 lg:hidden dark:bg-black dark:md:bg-transparent"
  >
    <div
      aria-controls="«r2»"
      aria-expanded="true"
      aria-haspopup="dialog"
      data-testid="dropdown__toggle"
    >
      <div
        class="md:border-theme-secondary-300 dark:border-theme-dark-700 dim:border-theme-dim-700 dark:bg-theme-dark-900 dim:bg-theme-dim-900 dim:border flex cursor-pointer items-center space-x-4 overflow-hidden rounded border border-transparent bg-white px-4 py-3 dark:border"
      >
        <span
          class="flex-1 leading-tight font-semibold"
        >
          General
        </span>
        <div
          class="transition-transform rotate-180"
        >
          <div
            style="height: 10px; width: 10px;"
          >
            <svg
              id="chevron-down-small"
              style="height: 100%; width: 100%;"
              viewBox="0 0 10 10"
              x="0"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <path
                d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="border-theme-secondary-300 dark:border-theme-dark-700 dim:border-theme-dim-700 hidden w-[200px] rounded-xl border p-1 lg:block"
  >
    <ul
      class="space-y-1"
    >
      <li
        class="relative cursor-default"
        data-testid="side-menu__item--general"
      >
        <div
          class="group relative flex h-12 items-center rounded-lg px-5 transition-all bg-theme-secondary-200 text-theme-primary-600 dim:bg-theme-dim-950 dim:text-theme-dim-50 dark:bg-theme-dark-950 dark:text-theme-dark-50"
        >
          <span
            class="font-semibold"
          >
            General
          </span>
        </div>
      </li>
      <li
        class="relative cursor-pointer"
        data-testid="side-menu__item--password"
      >
        <div
          class="group relative flex h-12 items-center rounded-lg px-5 transition-all hover:bg-theme-secondary-200 hover:text-theme-secondary-800 dim-hover:bg-theme-dim-950 dim-hover:text-theme-dim-50 dark:hover:bg-theme-dark-950 dark:hover:text-theme-dark-50"
        >
          <span
            class="font-semibold"
          >
            Password
          </span>
        </div>
      </li>
      <li
        class="relative cursor-pointer"
        data-testid="side-menu__item--export"
      >
        <div
          class="group relative flex h-12 items-center rounded-lg px-5 transition-all hover:bg-theme-secondary-200 hover:text-theme-secondary-800 dim-hover:bg-theme-dim-950 dim-hover:text-theme-dim-50 dark:hover:bg-theme-dark-950 dark:hover:text-theme-dark-50"
        >
          <span
            class="font-semibold"
          >
            Export
          </span>
        </div>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`SideBar > should render responsive dropdown 2`] = `
<DocumentFragment>
  <div
    class="border-theme-secondary-300 bg-theme-secondary-200 dark:border-theme-dark-700 dim:border-theme-dim-700 dim:bg-theme-dim-950 dim:md:bg-transparent relative -mx-6 -mt-4 border-t px-6 py-2 md:m-0 md:border-t-0 md:bg-transparent md:p-0 lg:hidden dark:bg-black dark:md:bg-transparent"
  >
    <div
      aria-controls="«r5»"
      aria-expanded="true"
      aria-haspopup="dialog"
      data-testid="dropdown__toggle"
    >
      <div
        class="md:border-theme-secondary-300 dark:border-theme-dark-700 dim:border-theme-dim-700 dark:bg-theme-dark-900 dim:bg-theme-dim-900 dim:border flex cursor-pointer items-center space-x-4 overflow-hidden rounded border border-transparent bg-white px-4 py-3 dark:border"
      >
        <span
          class="flex-1 leading-tight font-semibold"
        >
          General
        </span>
        <div
          class="transition-transform rotate-180"
        >
          <div
            style="height: 10px; width: 10px;"
          >
            <svg
              id="chevron-down-small"
              style="height: 100%; width: 100%;"
              viewBox="0 0 10 10"
              x="0"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <path
                d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="border-theme-secondary-300 dark:border-theme-dark-700 dim:border-theme-dim-700 hidden w-[200px] rounded-xl border p-1 lg:block"
  >
    <ul
      class="space-y-1"
    >
      <li
        class="relative cursor-default"
        data-testid="side-menu__item--general"
      >
        <div
          class="group relative flex h-12 items-center rounded-lg px-5 transition-all bg-theme-secondary-200 text-theme-primary-600 dim:bg-theme-dim-950 dim:text-theme-dim-50 dark:bg-theme-dark-950 dark:text-theme-dark-50"
        >
          <span
            class="font-semibold"
          >
            General
          </span>
        </div>
      </li>
      <li
        class="relative cursor-pointer"
        data-testid="side-menu__item--password"
      >
        <div
          class="group relative flex h-12 items-center rounded-lg px-5 transition-all hover:bg-theme-secondary-200 hover:text-theme-secondary-800 dim-hover:bg-theme-dim-950 dim-hover:text-theme-dim-50 dark:hover:bg-theme-dark-950 dark:hover:text-theme-dark-50"
        >
          <span
            class="font-semibold"
          >
            Password
          </span>
        </div>
      </li>
      <li
        class="relative cursor-pointer"
        data-testid="side-menu__item--export"
      >
        <div
          class="group relative flex h-12 items-center rounded-lg px-5 transition-all hover:bg-theme-secondary-200 hover:text-theme-secondary-800 dim-hover:bg-theme-dim-950 dim-hover:text-theme-dim-50 dark:hover:bg-theme-dark-950 dark:hover:text-theme-dark-50"
        >
          <span
            class="font-semibold"
          >
            Export
          </span>
        </div>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`SideBar > should render responsive dropdown 3`] = `
<DocumentFragment>
  <div
    class="border-theme-secondary-300 bg-theme-secondary-200 dark:border-theme-dark-700 dim:border-theme-dim-700 dim:bg-theme-dim-950 dim:md:bg-transparent relative -mx-6 -mt-4 border-t px-6 py-2 md:m-0 md:border-t-0 md:bg-transparent md:p-0 lg:hidden dark:bg-black dark:md:bg-transparent"
  >
    <div
      aria-controls="«r8»"
      aria-expanded="true"
      aria-haspopup="dialog"
      data-testid="dropdown__toggle"
    >
      <div
        class="md:border-theme-secondary-300 dark:border-theme-dark-700 dim:border-theme-dim-700 dark:bg-theme-dark-900 dim:bg-theme-dim-900 dim:border flex cursor-pointer items-center space-x-4 overflow-hidden rounded border border-transparent bg-white px-4 py-3 dark:border"
      >
        <span
          class="flex-1 leading-tight font-semibold"
        >
          General
        </span>
        <div
          class="transition-transform rotate-180"
        >
          <div
            style="height: 10px; width: 10px;"
          >
            <svg
              id="chevron-down-small"
              style="height: 100%; width: 100%;"
              viewBox="0 0 10 10"
              x="0"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <path
                d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="border-theme-secondary-300 dark:border-theme-dark-700 dim:border-theme-dim-700 hidden w-[200px] rounded-xl border p-1 lg:block"
  >
    <ul
      class="space-y-1"
    >
      <li
        class="relative cursor-default"
        data-testid="side-menu__item--general"
      >
        <div
          class="group relative flex h-12 items-center rounded-lg px-5 transition-all bg-theme-secondary-200 text-theme-primary-600 dim:bg-theme-dim-950 dim:text-theme-dim-50 dark:bg-theme-dark-950 dark:text-theme-dark-50"
        >
          <span
            class="font-semibold"
          >
            General
          </span>
        </div>
      </li>
      <li
        class="relative cursor-pointer"
        data-testid="side-menu__item--password"
      >
        <div
          class="group relative flex h-12 items-center rounded-lg px-5 transition-all hover:bg-theme-secondary-200 hover:text-theme-secondary-800 dim-hover:bg-theme-dim-950 dim-hover:text-theme-dim-50 dark:hover:bg-theme-dark-950 dark:hover:text-theme-dark-50"
        >
          <span
            class="font-semibold"
          >
            Password
          </span>
        </div>
      </li>
      <li
        class="relative cursor-pointer"
        data-testid="side-menu__item--export"
      >
        <div
          class="group relative flex h-12 items-center rounded-lg px-5 transition-all hover:bg-theme-secondary-200 hover:text-theme-secondary-800 dim-hover:bg-theme-dim-950 dim-hover:text-theme-dim-50 dark:hover:bg-theme-dark-950 dark:hover:text-theme-dark-50"
        >
          <span
            class="font-semibold"
          >
            Export
          </span>
        </div>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;
